<resources>
    <string name="app_name" translatable="false">Dating App</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string-array name="sliding_tab_titles">
        <item>Nearby</item>
        <item>Friend List</item>
        <item>Chat</item>
    </string-array>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>
    <string name="tab1_title">People near you</string>
    <string name="setting_privacy">Privacy</string>
    <string name="setting_notify">Notification</string>
    <string name="setting_notify_name">Enable or </string>
    <string name="setting_privacy_profile">Personal information</string>
    <string name="setting_privacy_profile_summary_on">Public your personal information</string>
    <string name="setting_privacy_profile_summary_off">Private your personal information</string>
    <string name="setting_privacy_location">Location</string>
    <string name="setting_privacy_location_summary">Change location mode</string>
    <string-array name="setting_privacy_location_entries">
        <item>High accuracy</item>
        <item>Battery saving</item>
        <item>Device only</item>
    </string-array>
    <string-array name="setting_privacy_location_entries_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_setting">Setting</string>
    <string name="setting_notify_on">Enable notification</string>
    <string name="setting_notify_off">Disable notification</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_google">Login with Google</string>
    <string name="action_sign_in_facebook">Login with Facebook</string>
    <string name="action_sign_out_facebook">Log out</string>
    <string name="action_register">Not a member ? <b>Register</b> now</string>
    <string name="action_tryagain">Try again</string>
    <string name="error_invalid_login">Invalid username or password!</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_connection">Unable to connect with the server. Check your internet connection and try again.</string>
    <string name="error_connection_title">Connection Error</string>
    <string name="error_invalid_year">Invalid year (4 digits)</string>
    <string name="error_invalid_age">Invalid age (2 digits)</string>
    <string name="error_password">Password does not match</string>
    <string name="error_dating_age">Age must be upper than 18</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Retype Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_yearbirth">Birth Year</string>
    <string name="register_policy">By clicking "Create a account", you agree you have read and consent to our policies.</string>
    <string name="register_reg">Create a Account</string>
    <string name="register_gender">Gender</string>
    <string name="register_gender_male">Male</string>
    <string name="register_gender_female">Female</string>
    <string name="register_back_login">Already have account ? <b>Sign in</b></string>
    <string name="register_hobby">Your Hobbies</string>
    <string-array name="register_hobbies">
        <item>Book</item>
        <item>Drink</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Sport</item>
        <item>Food</item>
        <item>Pet</item>
        <item>Football</item>
        <item>Swimming</item>
        <item>Dance</item>
        <item>Tennis</item>
        <item>Basketball</item>
        <item>Table Tennis</item>
        <item>Gymnastic</item>
        <item>Fishing</item>
    </string-array>
    <string name="register_dating">Dating Gender</string>
    <string name="register_datingage">Minimum Dating Age</string>
    <string name="register_buddy"><b>You want to date with</b></string>
    <string name="facebook_app_id">1598232803789820</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="card_section_request">Friend requests</string>
    <string name="card_section_recommend">Person you may know</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="edit_age">Age</string>
    <string name="edit_agree">Update Profile</string>
    <string name="edit_phone">Phone Number</string>
    <string name="edit_address">Address</string>
    <string name="progress_dialog">Loading ...</string>
    <string name="friend_accept">Accept</string>
    <string name="friend_dismiss">Dismiss</string>
    <string name="no_friend_item">No friend</string>
    <string name="setting_dating">You are looking for</string>
    <string name="setting_dating_men">Men</string>
    <string name="setting_dating_women">Women</string>
    <string name="setting_dating_hobbie">Person profile</string>
    <string name="setting_dating_profile_summary">People with these words in their profile</string>
    <string name="setting_dating_age">Ages</string>
    <string name="setting_dating_age_summary">Age from</string>
    <string name="add_friend">Add friend</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="register_duplicate_email">This email is exists, please try another email.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_address">Address</string>
    <string name="profile_age">Age</string>
    <string name="profile_hobbies">Hobbies</string>
    <string name="search_hint">Search by name</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
    <string name="search_no_result">No search result have been found.</string>
    <string name="profile_friend_request">Send friend request successfully</string>
    <string name="friend_accepted">Make friend successfully</string>
    <string name="loading_error">Loading error</string>
    <string name="friend_request">Friend request is sent</string>
    <string name="friend_deny_request">Friend request are dismissed</string>
    <string name="friend_year_old">years old</string>
    <string name="fab_unfriend">Unfriend</string>
    <string name="gcm_SenderId" translatable="false">74495258469</string>
    <string name="dialog_unfriend_title">Confirmation</string>
    <string name="dialog_unfriend_positive">Yes</string>
    <string name="dialog_unfriend_negative">No</string>
    <string name="dialog_unfriend_content">Do you want to delete relationship?</string>
    <string name="dialog_unfriended">Deleted</string>
    <string name="no_person_nearby">No person is nearby you.</string>
    <string name="title_activity_nearby_map" translatable="false">NearbyMapActivity</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="title_activity_chat" translatable="false">ChatActivity</string>
    <string name="chat_message">Enter text here</string>
    <string name="chat_setting_notification">Turn off notification</string>
    <string name="chat_setting_delete_conversation">Delete conversation</string>
    <string name="chat_today">Today</string>
    <string name="nearby_start_friend">%1$s friends nearby you</string>
    <string name="nearby_start_people">%1$s people you might want to know</string>
    <string name="no_nearby">No nearby person has been found</string>
    <string name="nearby_friend">Your nearby friend</string>
    <string name="nearby_people">People nearby you might want to meet</string>
    <string name="title_activity_register_new" translatable="false">RegisterNewActivity</string>
    <string name="register_one_title">General information</string>
    <string name="register_continue">Continue</string>
    <string name="register_email_error">Wrong email format</string>
    <string name="title_activity_hobby" translatable="false">HobbyActivity</string>
    <string-array name="hobbies">
        <item>Book</item>
        <item>Drink</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Sport</item>
        <item>Food</item>
        <item>Pet</item>
    </string-array>
    <string-array name="Book">
        <item>Novel</item>
        <item>Fiction</item>
        <item>Science Fiction</item>
        <item>Biography</item>
        <item>Romance</item>
        <item>Personal Development</item>
    </string-array>
    <string-array name="Drink">
        <item>Alcohol</item>
        <item>Soft Drinks</item>
        <item>Tea</item>
        <item>Juice</item>
    </string-array>
    <string-array name="Music">
        <item>Classic</item>
        <item>Dance</item>
        <item>Electronic</item>
        <item>Pop</item>
        <item>Jazz</item>
        <item>Country</item>
        <item>Rock</item>
        <item>Opera</item>
        <item>Blue</item>
        <item>R&amp;B</item>
        <item>Soul</item>
    </string-array>
    <string-array name="Movie">
        <item>Action</item>
        <item>Horror</item>
        <item>Drama</item>
        <item>Comedy</item>
        <item>Cartoon</item>
        <item>Science Fiction</item>
        <item>Suspense</item>
    </string-array>
    <string-array name="Food">
        <item>Pizza</item>
        <item>Spaghetti</item>
        <item>Sushi</item>
        <item>Hamburger</item>
        <item>BBQ</item>
        <item>Fast Food</item>
        <item>Sea Food</item>
    </string-array>
    <string-array name="Sport">
        <item>Football</item>
        <item>Swimming</item>
        <item>Dance</item>
        <item>Tennis</item>
        <item>Basketball</item>
        <item>Table Tennis</item>
        <item>Gymnastic</item>
        <item>Fishing</item>
    </string-array>
    <string-array name="Pet">
        <item>Cat</item>
        <item>Dog</item>
        <item>Rabbit</item>
        <item>Hamster</item>
        <item>Birth</item>
        <item>Fish</item>
    </string-array>
    <string name="hobby_finish">Finish</string>
    <string name="choose">Choose</string>
    <string name="hobby_choose">Choose your interest</string>
    <string name="dialog_hobby">You must select your hobbies to start using this application</string>
    <string name="dialog_ok">OK</string>
    <string name="title_activity_new_profile" translatable="false">NewProfileActivity</string>
    <string name="title_activity_edit_profile" translatable="false">EditProfileActivity</string>
    <string name="editprofile_avatar">Change Avatar</string>
    <string name="edit_password">Update your password</string>
    <string name="edit_hobby">Update your interest</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="save">Save</string>
    <string name="prompt_old_password">Old password</string>
    <string name="change_password">Change Password</string>
    <string name="friend_info">%1$s, %2$d years old.</string>
    <string name="friend_recommend_info">%1$s, %2$s years old, %3$s matching</string>
    <string name="update_profile_success">Update profile successfully</string>
    <string name="promt_location">Location</string>
    <string name="profile_mutual_friend">%1$s mutual friends</string>
    <string name="profile_no_mutual_friend">There are no mutual friend</string>
    <string name="profile_mutual_friend_header">Mutual friend</string>
    <string name="friend">Friend</string>
    <string name="empty_chat">No chat message</string>
</resources>