<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_notify">
        <SwitchPreference
            android:defaultValue="true"
            android:summaryOn="@string/setting_notify_on"
            android:summaryOff="@string/setting_notify_off"
            android:key="Notification"
            android:title="@string/setting_notify"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_privacy">
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summaryOn="@string/setting_privacy_profile_summary_on"
            android:summaryOff="@string/setting_privacy_profile_summary_off"
            android:title="@string/setting_privacy_profile"/>

        <ListPreference
            android:entries="@array/setting_privacy_location_entries"
            android:entryValues="@array/setting_privacy_location_entries_values"
            android:key="prefSyncFrequency"
            android:summary="@string/setting_privacy_location_summary"
            android:title="@string/setting_privacy_location"/>
    </PreferenceCategory>
</PreferenceScreen>