<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.thang.mobile_dating_app_v20.Activity.EditProfileActivity">
    <item
        android:id="@+id/commit_update"
        android:orderInCategory="100"
        android:title="@string/save"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/update_password"
        android:orderInCategory="100"
        android:title="@string/edit_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/update_hobby"
        android:orderInCategory="200"
        android:title="@string/edit_hobby"
        app:showAsAction="never" />
</menu>
