<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_old_password"
        android:inputType="textPassword"
        app:met_baseColor="@color/primary_text"
        app:met_errorColor="#ffdd4c3a"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/primary_text"
        app:met_textColorHint="@color/primary_text" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:met_baseColor="@color/primary_text"
        app:met_errorColor="#ffdd4c3a"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/primary_text"
        app:met_textColorHint="@color/primary_text" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/re_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_confirm_password"
        android:inputType="textPassword"
        app:met_baseColor="@color/primary_text"
        app:met_errorColor="#ffdd4c3a"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/primary_text"
        app:met_textColorHint="@color/primary_text" />

</LinearLayout>